@@ -1,3 +1,8 @@
+2003-10-16  Jonathan Graehl  <graehl@isi.edu>
+
+	* src/wfstio.cc: fixed bug in one-arc per line output of
+	zero-weight arcs (showed up with -t)
+
 Mon Oct 13 15:40:05 2003  Jonathan Graehl  <graehl@brahms.isi.edu>
 
 	* src/train.cc: fixed scaling of relative log-likelihood convergence
